--- a/DapperDemo/appsettings.json
+++ b/DapperDemo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Skynet;Database=dapper;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
